syntax = "proto3";
/**
*联合查询模块，提供跨模块的查询
*/
service UnionManage {
    //生成用户每日答题题目
    rpc GetProblemNoAnswer(GetProblemNoAnswerReq) returns (GetProblemNoAnswerRsp) {}
}

message GetProblemNoAnswerReq {
    int64 userId = 1;
    int64 eventId = 2;
    int64 teamId = 3;
    int64 paticipantId = 4;
    UnionProblemNum problemNum = 5;
}

message UnionProblemNum {
    int32 single = 1;
    int32 multiple = 2;
    int32 fill = 3;
    int32 judge = 4;
}

message GetProblemNoAnswerRsp {
    repeated ProblemItem single  = 1;
    repeated ProblemItem multiple  = 2;
    repeated ProblemItem fill  = 3;
    repeated ProblemItem judge  = 4;
    bool buildFlag = 5;
    bool answerFlag = 6;
}

message ProblemItem {
    int64 problemId = 1;
    string problem = 2;
    string option = 3;
}
